Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-28029

No warnings if server starts with "--old" option

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.9(EOL)
    • 10.9.1
    • Variables
    • None

    Description

      I try to start server with option "--old":

      ~/work/MariaDB/10.9/bld/sql/mariadbd --defaults-group-suffix=.1 --defaults-file=~/work/MariaDB/10.9/bld/mysql-test/var/my.cnf --log-output=file --old
      

      and expect a warning that option "--old" is deprecated, but there is no any warnings.

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              lstartseva Lena Startseva
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h 50m
                  3h 50m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.