MDEV-28029: No warnings if server starts with "--old" Analysis: When --old option is used, the corresponding --old-mode variables are set but warning is not given. Fix: Use sql_print_warning() to give warning.