sql/mysqld.cc
@@ -8496,6 +8496,8 @@ static int get_options(int *argc_ptr, char ***argv_ptr)
     global_system_variables.old_behavior|= (OLD_MODE_NO_PROGRESS_INFO |
                                            OLD_MODE_IGNORE_INDEX_ONLY_FOR_JOIN |
                                            OLD_MODE_COMPAT_5_1_CHECKSUM);
+    sql_print_warning("--old is deprecated and will be removed in a future "
+                      "release. Please use --old-mode instead. ");
   }
 
   if (global_system_variables.net_buffer_length > 
